--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
         <div id="hero-image"></div>
         <div id="cover-text">
             <h2>Love Running</h2>
-            <h3>Dublin Docklandsa and Phoenix Park</h3>
+            <h3>Dublin Docklands and Phoenix Park</h3>
         </div>
     </section>
-    <section>
-        Club Ehtos
+    <section id="club-ethos">
+        <h1>Why Love Running with us</h1>
+        <div id="left-about">Left</div>
+        <div id="right-about">Right</div>
+        <div id="center-about">Center</div>
     </section>
     <section>
         Running locations, distances and times
