--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <nav id="menu">
             <ul>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="#">Sign Up</a>
                 </li>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="gallery.html" class="active">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
